src/bin/snapshots/antlr4_rust_gen__tests__fixed_lookahead_thrift_like_table.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: table
---
FixedLookaheadTable {
    lookahead: 2,
    root: Probe(
        [
            (
                [
                    (
                        1,
                        1,
                    ),
                ],
                Probe(
                    [
                        (
                            [
                                (
                                    2,
                                    2,
                                ),
                            ],
                            Alt(
                                1,
                            ),
                        ),
                        (
                            [
                                (
                                    4,
                                    4,
                                ),
                            ],
                            Alt(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        3,
                        3,
                    ),
                ],
                Alt(
                    3,
                ),
            ),
        ],
    ),
}
