src/bin/snapshots/antlr4_rust_gen__tests__generated_decision_filters_semantic_predicate_alts.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: rendered
---
let __decision_start = antlr4_runtime::IntStream::index(self.base.input());
let __prediction = {
    let __simulator = self.simulator.get_or_insert_with(|| antlr4_runtime::ParserAtnSimulator::new_shared(atn()));
    let __prediction_context = __simulator.intern_prediction_context(self.base.rule_context_version(), self.base.prediction_context_return_states(atn()));
    __simulator.set_exact_ambig_detection(self.base.prediction_mode() == antlr4_runtime::PredictionMode::LlExactAmbigDetection);
    __simulator.adaptive_predict_stream_info_with_context(0, 0, self.base.input(), __prediction_context)
        .map_err(|__error| match __error {
            antlr4_runtime::ParserAtnSimulatorError::NoViableAlt { index, .. } => self.base.no_viable_alternative_error_at(__decision_start, index),
            _ => self.base.no_viable_alternative_error(__decision_start),
        })?
};
let __prediction = if __prediction.has_semantic_context {
    let __semantic_la = self.base.la(1);
    let __semantic_alt = match __prediction.alt {
        1 if __semantic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) => Some(1),
        1 => {
            if __semantic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) {
                Some(1)
            } else
            if __semantic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 1, &__ctx, __precedence) {
                Some(2)
            } else
            if __semantic_la == 2 {
                Some(3)
            } else
            { None }
        }
        2 if __semantic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 1, &__ctx, __precedence) => Some(2),
        2 => {
            if __semantic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) {
                Some(1)
            } else
            if __semantic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 1, &__ctx, __precedence) {
                Some(2)
            } else
            if __semantic_la == 2 {
                Some(3)
            } else
            { None }
        }
        _ => Some(__prediction.alt),
    };
    match __semantic_alt {
        Some(__alt) => antlr4_runtime::ParserAtnPrediction { alt: __alt, ..__prediction },
        None => {
            let __error = self.base.no_viable_alternative_error(__decision_start);
            return Err(__error);
        }
    }
} else {
    __prediction
};
if self.base.report_diagnostic_errors() {
    let __diagnostic_la = self.base.la(1);
    let mut __diagnostic_alts = Vec::new();
    if __diagnostic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) {
        __diagnostic_alts.push(1);
    }
    if __diagnostic_la == 1 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 1, &__ctx, __precedence) {
        __diagnostic_alts.push(2);
    }
    if __diagnostic_la == 2 {
        __diagnostic_alts.push(3);
    }
    self.base.record_generated_ambiguity_diagnostic(atn(), 1, __decision_start, __decision_start, &__diagnostic_alts);
}
match __prediction.alt {
    1 => {
        if !self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) {
            if let Some(__message) = self.base.parser_semantic_ir_predicate_failure_message(1, 0, parser_semantics()) {
                return Err(self.base.failed_predicate_option_error(1, __message));
            }
            return Err(self.base.failed_predicate_error("semantic predicate"));
        }
        let __match = self.base.match_token_recovering(1, 2, atn())?;
        __consumed_eof |= __match.consumed_eof();
        for __child in __match.into_child_iter() { self.base.add_parse_child(&mut __ctx, __child); }
    }
    2 => {
        if !self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 1, &__ctx, __precedence) {
            if let Some(__message) = self.base.parser_semantic_ir_predicate_failure_message(1, 1, parser_semantics()) {
                return Err(self.base.failed_predicate_option_error(1, __message));
            }
            return Err(self.base.failed_predicate_error("semantic predicate"));
        }
        let __match = self.base.match_token_recovering(1, 3, atn())?;
        __consumed_eof |= __match.consumed_eof();
        for __child in __match.into_child_iter() { self.base.add_parse_child(&mut __ctx, __child); }
    }
    3 => {
        let __match = self.base.match_token_recovering(2, 4, atn())?;
        __consumed_eof |= __match.consumed_eof();
        for __child in __match.into_child_iter() { self.base.add_parse_child(&mut __ctx, __child); }
    }
    _ => return Err(self.base.no_viable_alternative_error(__decision_start)),
}
