src/bin/snapshots/antlr4_rust_gen__tests__generated_loop_filters_failed_leading_predicate_to_exit_alt.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: rendered
---
let mut __loop_iter_1 = false;
loop {
    match self.base.sync_decision(atn(), 1, !__ctx.has_matched_child(), __loop_iter_1) {
        Ok(__sync_children) => {
            for __child in __sync_children { self.base.add_parse_child(&mut __ctx, __child); }
        }
        Err(__error) => {
            __sync_error = Some(__error.clone());
            return Err(__error);
        }
    }
    let __decision_start = antlr4_runtime::IntStream::index(self.base.input());
    let __prediction = {
        let __simulator = self.simulator.get_or_insert_with(|| antlr4_runtime::ParserAtnSimulator::new_shared(atn()));
        let __prediction_context = __simulator.intern_prediction_context(self.base.rule_context_version(), self.base.prediction_context_return_states(atn()));
        __simulator.set_exact_ambig_detection(self.base.prediction_mode() == antlr4_runtime::PredictionMode::LlExactAmbigDetection);
        __simulator.adaptive_predict_stream_info_with_context(0, 0, self.base.input(), __prediction_context)
            .map_err(|__error| match __error {
                antlr4_runtime::ParserAtnSimulatorError::NoViableAlt { index, .. } => self.base.no_viable_alternative_error_at(__decision_start, index),
                _ => self.base.no_viable_alternative_error(__decision_start),
            })?
    };
    let __prediction = if __prediction.alt == 1 {
        let __semantic_la = self.base.la(1);
        if __semantic_la == 3 && self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) {
            __prediction
        } else {
            antlr4_runtime::ParserAtnPrediction { alt: 2, ..__prediction }
        }
    } else {
        __prediction
    };
    self.base.record_generated_prediction_diagnostic(atn(), 1, &__prediction);
    match __prediction.alt {
        1 => {
            __loop_iter_1 = true;
            if !self.base.parser_semantic_ir_predicate_matches_with_context_and_local(parser_semantics(), 1, 0, &__ctx, __precedence) {
                if let Some(__message) = self.base.parser_semantic_ir_predicate_failure_message(1, 0, parser_semantics()) {
                    return Err(self.base.failed_predicate_option_error(1, __message));
                }
                return Err(self.base.failed_predicate_error("semantic predicate"));
            }
            let __match = self.base.match_token_recovering(3, 4, atn())?;
            __consumed_eof |= __match.consumed_eof();
            for __child in __match.into_child_iter() { self.base.add_parse_child(&mut __ctx, __child); }
        }
        2 => {
            break;
        }
        _ => return Err(self.base.no_viable_alternative_error(__decision_start)),
    }
}
