src/bin/snapshots/antlr4_rust_gen__tests__generated_module_file_header.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: "generated_module_header.replace(env!(\"CARGO_PKG_VERSION\"),\n\"<generator-version>\")"
---
// @generated by antlr-rust-runtime v<generator-version> - do not edit
// project: https://github.com/ophi-dev/antlr-rust-runtime
antlr4_runtime::__antlr4_rust_require_codegen_api!(2, "<generator-version>");
#[allow(warnings, missing_docs, clippy::all, clippy::pedantic, clippy::nursery)]
#[rustfmt::skip]
mod __antlr4_rust_generated {
